cmd/tools/vdoc/tests/testdata/project1/main.v
const (
	source_root = 'temp'
)

// funky - comment for function below
fn funky() {
	println('hi')
}
